welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: ')' expected but ';' found.
recule (nbPas = nbPas + 1;)
                         ^Variables:7: error: illegal start of statement
recule (nbPas = nbPas + 1;)
                          ^